--- a/public/style.css
+++ b/public/style.css
@@ -122,6 +122,7 @@ footer {
   align-items: center;
   justify-content: center;
   background-color: black;
+  flex-direction: column;
 }
 footer span {
   color: rgb(159, 159, 159);
